# modbus-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: app.rs  common.rs  error.rs  frame.rs  interface.rs  lib.rs  model.rs  transport.rs
src/app/: client.rs  model.rs  types.rs
src/app/model/: code.rs  request.rs  response.rs
src/frame/: pdu.rs  rtu.rs
src/frame/pdu/: fcode.rs  function.rs  types.rs
src/frame/pdu/function/: request.rs  response.rs
src/model/: code.rs  data.rs
src/model/data/: request.rs  response.rs
src/transport/: rtu.rs  tcp.rs
