[package]
name = "modbus"
version = "0.1.0"
edition = "2021"
authors = ["Ryouhei Kato <r-kato@musen.co.jp>"]
description = "Modbus `no_std` library for embedded systems"

[features]
default = []

std = []
alloc = []

[dependencies]
heapless = { version = "0.8.0" }

thiserror = { version = "2.0.9", default-features = false }

[dev-dependencies]
